finishing up profile